Fixed Scrollbar issue

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -4,7 +4,6 @@
   flex-wrap: wrap;
   max-width: 100% !important;
   overflow-x: hidden !important;
-  overflow-y: scroll;
   #about-zone{
     position: relative;
     top: 5%;
