--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     max-width: 100% !important;
-    overflow-x: hidden !important;
+
       .text-zone{
           position: relative;
           top: 15%;
